--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "studiomofo",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Help a MoFo out",
+  "scripts": {
+    "postinstall": "bower install; grunt heroku"
+  },
   "dependencies": {
     "express": "3.4.8",
     "bower": "1.2.8",
