--- a/.env-dist
+++ b/.env-dist
@@ -2,3 +2,7 @@ NODE_ENV=development_or_staging_or_production
 PORT=choose_a_port
 AWS_KEY_ID=your_id
 AWS_SECRET_KEY=your_secret_key
+REQEUST_FROM_EMAIL=
+REQEUST_TO_EMAIL=
+REQEUST_TWEET_TO_EMAIL=
+REQEUST_TWEET_CC_EMAIL=
