Add helmet and security headers optionally configured in .env

--- a/example.env
+++ b/example.env
@@ -1,4 +1,20 @@
 NODE_ENV=development_or_staging_or_production
-PORT=5000
+PORT=choose_a_port
 AWS_KEY_ID=your_id
 AWS_SECRET_KEY=your_secret_key
+REQEUST_FROM_EMAIL=
+REQEUST_TO_EMAIL=
+REQEUST_TWEET_TO_EMAIL=
+REQEUST_TWEET_CC_EMAIL=
+
+
+# Disable HSTS? (set to 'true' to disable HSTS)
+HSTS_DISABLED='true'
+
+# Use Deny settings for X-Frame headers?
+# set to 'true' to disable X-frames-options denial
+DISABLE_XFO_HEADERS_DENY='false'
+
+# Use default XSS protection?
+# set to 'true' to disable IEXSS protection
+IEXSS_PROTECTION_DISABLED='false'
